# execution-trust-runtime

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  approvals_ledger.json  attack_subtle_mutation_test.py  celery_app.py  docker-compose.yml  grok_fail_privatevault_pass.py  grok_fail_test.sh  grok_vs_privatevault_test.py  main.py  pyproject.toml  real_grok_attack_test.sh  real_grok_test.sh  scenario5_improved.sh  scenario5_llm_bypass.sh  subtle_attack_test.py  test_grok_adversarial.py
.github/workflows/: ci.yml
agents/: __init__.py  base_agent.py
agents/chief_of_staff/: agent.py
agents/procurement/: agent.py
agents/revenue_ops/: agent.py
app/: approval_webhook.py  main_fastapi.py
core/: __init__.py  approval_gate.py  approval_token.py  metrics.py  policy_loader.py  sdk_compat.py
core/hermes/: __init__.py  orchestrator.py
core/llm/: grok_client.py
core/memory/: __init__.py  reflection.py  vector_memory.py
core/vault/: private_vault.py
demo/: __init__.py  scenario5_llm_bypass.py
execution_trust_runtime.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
integrations/: salesforce_client.py
integrations/firewalled/: __init__.py  salesforce_client.py
memory_db/: chroma.sqlite3
memory_db/c4cf7755-7fa0-483d-aab3-b1b6f199f08c/: index_metadata.pickle
policies/default/: config.yaml
services/: notifier.py
services/retrieval/: __init__.py  langgraph_router.py
shared/models/: db_models.py
shared/schemas/: event_schemas.py
tests/: __init__.py  test_approval_gate.py  test_firewalled_integrations.py  test_private_vault.py  test_smoke.py  test_vault.py
tests/demo/: __init__.py  full_demo.py  live_demo.py
