[project]
name = "execution-trust-runtime"
version = "0.1.0"
description = "Runtime verification for autonomous enterprise agents with PrivateVault"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "redis>=5.0.0",
    "celery[redis]>=5.3.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-community>=0.2.0",
    "llama-index>=0.10.0",
    "chromadb>=0.5.0",
    "qdrant-client>=1.9.0",
    "sentence-transformers>=3.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",  # for Postgres
    "python-dotenv>=1.0.0",
    "slack-sdk>=3.21.0",  # for SlackNotifier Block Kit
    # sendgrid removed (replaced by stdlib smtplib per spec)
    "simple-salesforce>=1.0.0",  # live Salesforce sandbox OAuth2 + SOQL for Revenue Ops
    "httpx>=0.25.0",  # for async if needed
    "pyyaml>=6.0.0",  # for policies/*.yaml hot-reload
    "watchdog>=4.0.0",  # file change detection for policy hot-reload
    "prometheus-client>=0.20.0",  # metrics endpoint (/metrics)
    "privatevault-sdk>=0.1.0",  # official SDK with @vault_checkpoint(requires_approval=True, approver=...)
]

[tool.setuptools]
packages = ["core", "agents", "app", "services", "shared", "integrations", "tests.demo"]


[project.scripts]
run = "main:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "fakeredis>=2.0.0",
]
